# obs-studio

./: .gitmodules  .travis.yml
cmake/Modules/: CopyMSVCBins.cmake
libobs/: CMakeLists.txt
obs/: window-basic-settings.cpp  window-basic-settings.hpp
obs/data/locale/: en-US.ini
obs/data/themes/: Dark.qss  Default.qss
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/ffmpeg-mux/: ffmpeg-mux.c
plugins/obs-nvenc/: CMakeLists.txt  obs-nvenc-helper.c  obs-nvenc-optional.c  obs-nvenc-plugin-main.c  obs-nvenc.c  obs-nvenc.h
plugins/obs-nvenc/libnvenc/: NvHWEncoder.cpp
